# xurl

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: homebrew-publish.yml  npm-publish.yml  pypi-publish.yml  release.yml
docs/: subagent-uri-design.md
scripts/: stage_pypi_packages.py
skills/turl/: SKILL.md
skills/xurl/: SKILL.md
turl-cli/: Cargo.toml
turl-cli/src/: main.rs
turl-cli/tests/: cli.rs
turl-core/: Cargo.toml
turl-core/src/: model.rs  render.rs  service.rs  uri.rs
turl-core/src/provider/: gemini.rs  mod.rs
xurl-cli/: Cargo.toml
xurl-cli/src/: main.rs
xurl-cli/tests/: cli.rs
xurl-core/: Cargo.toml
xurl-core/src/: error.rs  incremental.rs  lib.rs  model.rs  process.rs  render.rs  service.rs
xurl-core/src/provider/: mod.rs
