[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "xuanwo-turl"
dynamic = ["version"]
description = "Locate and read local code-agent thread files"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
keywords = ["codex", "claude", "thread", "cli", "rust"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Rust",
  "Topic :: Software Development",
]

[project.urls]
Homepage = "https://github.com/Xuanwo/turl"
Repository = "https://github.com/Xuanwo/turl"
Issues = "https://github.com/Xuanwo/turl/issues"

[tool.maturin]
bindings = "bin"
manifest-path = "turl-cli/Cargo.toml"
compatibility = "pypi"
sdist-generator = "git"
strip = true
