[package]
name = "xurl-core"
version = "0.0.15"
edition = "2024"

[features]
default = ["sqlite"]
sqlite = ["dep:rusqlite"]

[dependencies]
dirs = "6.0.0"
libc = "0.2"
once_cell = "1.21.3"
regex = "1.12.2"
rusqlite = { version = "0.37.0", features = ["bundled"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.23.0"
